--- a/index.css
+++ b/index.css
@@ -40,7 +40,6 @@ header > h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 200px;
     gap: 20px;
     
 
@@ -51,6 +50,7 @@ header > h1 {
 
     text-decoration: none;
     display: flex;
+    flex-wrap: nowrap;
     gap: 20px;
     align-items: center;
     justify-content: flex-start;
