--- a/styles/utilidade.css
+++ b/styles/utilidade.css
@@ -78,7 +78,7 @@ h1 {
 
     border-radius: 8px;
     margin-top: 3%;
-    height: 250px;
+    height: 300px;
     width: 100%;
     background-color:#ee4d2d2a;
     box-shadow: 1px 1px 6px rgba(186, 169, 169, 0.482);
@@ -112,4 +112,16 @@ h1 {
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
     color: rgb(98, 89, 89);
+}
+
+
+.textocodigo{
+    background-color: white;
+    width: max-content;
+    margin: 0 auto;
+    border-style: dashed;
+    border-color: #ee4d2d;
+    border-radius: 8px;
+    padding: 5px;
+    color: rgb(135, 11, 11);
 }
